# strategobot

./: .gitattributes  Cargo.toml  README.md  build.rs  protocol.txt
.cargo/: config.toml
src/: boardbitmap.rs  bot.rs  game.rs  game_coordinator.rs  json_runner.rs  lib.rs  main.rs  reservoir_sample.rs
src/game/: action.rs  logic.rs  position.rs  rank.rs  state.rs
