[package]
name = "strategobot"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bitvec = "1.0.1"
itertools = "0.10.5"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rayon = "1.7.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tinyvec = "1.6.0"
